--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         }
 
         .header {
-            background: linear-gradient(135deg, #f5b642ab, #f5b642ab);
+            background: linear-gradient(135deg, #dda030da);
             color: black;
             padding: 40px;
             text-align: center;
@@ -120,7 +120,7 @@
         }
 
         .about h2 {
-            color: #64b5f6;
+            color: #dda030da;
             margin-bottom: 15px;
             font-size: 1.8em;
             text-align: center;
@@ -137,7 +137,7 @@
         }
 
         .social-links h2 {
-            color: #64b5f6;
+            color: #dda030da;
             margin-bottom: 25px;
             font-size: 1.8em;
             text-align: center;
